# numeric-algs

./: Cargo.toml
src/: lib.rs  traits.rs
src/integration/: dormand_prince.rs  mod.rs  rk4.rs  rk8.rs
src/symplectic/: mod.rs  traits.rs
src/symplectic/integration/: mod.rs  neri.rs  suzuki.rs
