[package]
name = "numeric-algs"
version = "0.5.1"
authors = ["Bartłomiej Kamiński <fizyk20@gmail.com>"]
description = "Crate implementing some numerical algorithms"
license = "MIT"
repository = "https://github.com/fizyk20/numeric-algs.git"
edition = "2018"

[lib]
name = "numeric_algs"

[dependencies]
nalgebra = { version = "0.27", optional = true }
